# ComfyUI-RichText_BasicDynamicPrompts

./: README.md  nodes.py  pyproject.toml
web/nodes/: nodes.js
web/widgets/: loras_widget_components.js
